5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_2195.log
== SUBMITION (2019-05-09 18:27:21) 
-- CODE:
w = int(input("digite a data:"))

a = w // 10000000
b = w
if()
-- EXECUTION TIME:
0.153195
-- ERROR:
  File "/home/codebench/codes/1675/2195/main.py", line 5
    if()
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:31:43) 
-- CODE:
w = int(input("digite a data:"))

a = w // 10000000
b = w // 1000000 % 10
c = w // 100000 % 10
d = w // 10000 % 10
e = w // 1000 % 10
f = w // 100 % 10
g = w // 10 % 10
h = w % 10

print(a,b,c,d,e,f,g,h)
-- OUTPUT:
1 5 0 8 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:35:28) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = "!"
c = w // 100000
d = "!"
e = w // 1000 % 10
f = w // 100 % 10
g = w // 10 % 10
h = w % 10

print(a,b,c,d,e,f,g,h)


-- OUTPUT:
15 ! 150 ! 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:37:25) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = "!"
c = w // 10000 % 100
d = "!"
e = w // 1000 % 10
f = w // 100 % 10
g = w // 10 % 10
h = w % 10

print(a,b,c,d,e,f,g,h)


-- OUTPUT:
15 ! 8 ! 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:38:03) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = "!"
c = w // 10000 % 10
d = "!"
e = w // 1000 % 10
f = w // 100 % 10
g = w // 10 % 10
h = w % 10

print(a,b,c,d,e,f,g,h)


-- OUTPUT:
15 ! 8 ! 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:39:40) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 1000 % 10
c = w // 1000 % 10
d = w // 100 % 10
e = w // 10 % 10
f = w % 10

print(a,b,c,d,e,f)


-- OUTPUT:
15 1 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:40:21) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 100000 % 100
c = w // 1000 % 10
d = w // 100 % 10
e = w // 10 % 10
f = w % 10

print(a,b,c,d,e,f)


-- OUTPUT:
15 50 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:40:39) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 100000 % 10
c = w // 1000 % 10
d = w // 100 % 10
e = w // 10 % 10
f = w % 10

print(a,b,c,d,e,f)


-- OUTPUT:
15 0 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:41:03) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 1000000 % 10
c = w // 1000 % 10
d = w // 100 % 10
e = w // 10 % 10
f = w % 10

print(a,b,c,d,e,f)


-- OUTPUT:
15 5 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:41:51) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w % 1000000
c = w // 1000 % 10
d = w // 100 % 10
e = w // 10 % 10
f = w % 10

print(a,b,c,d,e,f)


-- OUTPUT:
15 81990 1 9 9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:42:44) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w % 1000000
c = w % 1000

print(a,b,c)


-- OUTPUT:
15 81990 990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:44:14) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 
c = w % 10000

print(a,b,c)


-- ERROR:
File "XXXX", line 4
    b = w // 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:44:41) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w 1000 % 10
c = w % 10000

print(a,b,c)


-- ERROR:
File "XXXX", line 4
    b = w 1000 % 10
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:44:53) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 1000 % 10
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 1 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:48:18) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 10000000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 1 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:49:11) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 100000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 50 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:53:16) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 100000 % 1000
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 150 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:53:52) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 100000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 50 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:54:21) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 1000000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 15 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:54:32) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 1000000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 15 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:54:42) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 10000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:58:33) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 10000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:58:53) 
-- CODE:
w = int(input("digite a data:"))

a = w // 1000000
b = w // 10000 % 100
c = w % 10000

print(a,b,c)


-- OUTPUT:
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:13:08) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

print(a,b,c)
#if(ano > 0):
#	elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
#		if(mes>0 and mes<12):
#			if(mes == 2 )
#else:
#	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:13:48) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

print(dia,mes,ano)
#if(ano > 0):
#	elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
#		if(mes>0 and mes<12):
#			if(mes == 2 )
#else:
#	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- OUTPUT:
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:14:24) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

print(dia,mes,ano)
#if(ano > 0):
#	elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
#		if(mes>0 and mes<12):
#			if(mes == 2 )
#else:
#	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- OUTPUT:
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:16:56) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

print(dia,mes,ano)
if(ano > 0):
	elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
		if(mes>0 and mes<12):
			if(mes == 2 ):
				if(dia>1 and dia<29):
					print(dia," de ",mes," de ",ano," eh uma data valida")
else:
	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- EXECUTION TIME:
0.127636
-- ERROR:
  File "/home/codebench/codes/1675/2195/main.py", line 9
    elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:16:56) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

print(dia,mes,ano)
if(ano > 0):
	elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
		if(mes>0 and mes<12):
			if(mes == 2 ):
				if(dia>1 and dia<29):
					print(dia," de ",mes," de ",ano," eh uma data valida")
else:
	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- EXECUTION TIME:
0.272072
-- ERROR:
  File "/home/codebench/codes/1675/2195/main.py", line 9
    elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:16:56) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

print(dia,mes,ano)
if(ano > 0):
	elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
		if(mes>0 and mes<12):
			if(mes == 2 ):
				if(dia>1 and dia<29):
					print(dia," de ",mes," de ",ano," eh uma data valida")
else:
	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- EXECUTION TIME:
0.21149
-- ERROR:
  File "/home/codebench/codes/1675/2195/main.py", line 9
    elif((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:28:08) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

if(ano > 0):
	if(mes>0 and mes<=12):
		if((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))): #bissexto
			if(mes == 2 ):
				if(dia>=1 and dia<=29):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano,"nao eh uma data valida")
			elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 10)or(mes == 12):
				if(dia>0 and dia<32):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
				if(dia>0 and dia<=30):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 2 ):
			if(dia>=1 and dia<=28):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano,"nao eh uma data valida")
		elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 12):
			if(dia>0 and dia<32):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
			if(dia>0 and dia<=30):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 10):
			if(ano == 1582)
				if(dia>0 and dia<5)or(dia>14 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				if(dia>0 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
		else:
			print(dia," de ",mes," de ",ano," nao eh uma data valida")
else:
	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- ERROR:
File "XXXX", line 43
    if(ano == 1582)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:28:36) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

if(ano > 0):
	if(mes>0 and mes<=12):
		if((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))): #bissexto
			if(mes == 2 ):
				if(dia>=1 and dia<=29):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano,"nao eh uma data valida")
			elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 10)or(mes == 12):
				if(dia>0 and dia<32):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
				if(dia>0 and dia<=30):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 2 ):
			if(dia>=1 and dia<=28):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano,"nao eh uma data valida")
		elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 12):
			if(dia>0 and dia<32):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
			if(dia>0 and dia<=30):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 10):
			if(ano == 1582):
				if(dia>0 and dia<5)or(dia>14 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				if(dia>0 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
		else:
			print(dia," de ",mes," de ",ano," nao eh uma data valida")
else:
	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- OUTPUT:
15  de  8  de  1990  eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:31:12) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

if(ano > 0):
	if(mes>0 and mes<=12):
		if((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))): #bissexto
			if(mes == 2 ):
				if(dia>=1 and dia<=29):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano,"nao eh uma data valida")
			elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 10)or(mes == 12):
				if(dia>0 and dia<32):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
				if(dia>0 and dia<=30):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 2 ):
			if(dia>=1 and dia<=28):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano,"nao eh uma data valida")
		elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 12):
			if(dia>0 and dia<32):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
			if(dia>0 and dia<=30):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 10):
			if(ano == 1582):
				if(dia>0 and dia<5)or(dia>14 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				if(dia>0 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
		else:
			print(dia," de ",mes," de ",ano," nao eh uma data valida")
	else:
		print(dia," de ",mes," de ",ano," nao eh uma data valida")
else:
	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- OUTPUT:
15  de  8  de  1990  eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 20:31:33) 
-- CODE:
w = int(input("digite a data:"))

dia = w // 1000000
mes = w // 10000 % 100
ano = w % 10000

if(ano > 0):
	if(mes>0 and mes<=12):
		if((ano%400 == 0) or ((ano%100 != 0) and (ano%4 == 0))): #bissexto
			if(mes == 2 ):
				if(dia>=1 and dia<=29):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano,"nao eh uma data valida")
			elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 10)or(mes == 12):
				if(dia>0 and dia<32):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
				if(dia>0 and dia<=30):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 2 ):
			if(dia>=1 and dia<=28):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano,"nao eh uma data valida")
		elif(mes == 1)or(mes == 3)or(mes == 5)or(mes == 7)or(mes == 8)or(mes == 12):
			if(dia>0 and dia<32):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 4)or(mes == 6)or(mes == 9)or(mes == 11):
			if(dia>0 and dia<=30):
				print(dia," de ",mes," de ",ano," eh uma data valida")
			else:
				print(dia," de ",mes," de ",ano," nao eh uma data valida")
		elif(mes == 10):
			if(ano == 1582):
				if(dia>0 and dia<5)or(dia>14 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
			else:
				if(dia>0 and dia<=31):
					print(dia," de ",mes," de ",ano," eh uma data valida")
				else:
					print(dia," de ",mes," de ",ano," nao eh uma data valida")
		else:
			print(dia," de ",mes," de ",ano," nao eh uma data valida")
	else:
		print(dia," de ",mes," de ",ano," nao eh uma data valida")
else:
	print(dia," de ",mes," de ",ano,"nao eh uma data valida")
-- EXECUTION TIME:
0.196632
-- TEST CASE 1:
---- input:
15081990
---- correct output:
15 de 8 de 1990 eh uma data valida
---- user output:
15  de  8  de  1990  eh uma data valida
-- TEST CASE 2:
---- input:
29021999
---- correct output:
29 de 2 de 1999 nao eh uma data valida
---- user output:
29  de  2  de  1999 nao eh uma data valida
-- TEST CASE 3:
---- input:
10101582
---- correct output:
10 de 10 de 1582 nao eh uma data valida
---- user output:
10  de  10  de  1582  nao eh uma data valida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
